# ai-chess-experiments

./: Dockerfile  Dockerfile.dev  README.md  Tiltfile  dev.sh  docker-compose.yml  manage.sh  pyproject.toml  run_tests.sh  test.sh
ai_chess_experiments/: benchmark.py  bot_runner.py  play_game.py
ai_chess_experiments/benchmark/: positions.py  run_benchmark.py
ai_chess_experiments/engines/: base_engine.py  minimax_engine.py  random_engine.py
ai_chess_experiments/utils/: dashboard.py
backend/: .coverage  .dockerignore  Dockerfile  Dockerfile.dev  api.py  metrics.py  monitoring.py  pyproject.toml  pytest.ini
backend/ai_chess_experiments/: __init__.py  api.py  bot_runner.py  dashboard.py  elo.py  game_recorder.py  glicko2.py  leaderboard.py  main.py  play_self.py  viewer.py
backend/ai_chess_experiments/benchmark/: engine_benchmark.py
backend/ai_chess_experiments/engines/: __init__.py  base_engine.py  heuristics.py  iterative_deepening_engine.py  leela_engine.py  llm_engine.py  maia_engine.py  mcts_engine.py  minimax_engine.py  negamax_engine.py  quiescence_engine.py  stockfish_engine.py  stockfish_nnue_engine.py
backend/ai_chess_experiments/utils/: game_viewer.py  lichess_client.py  logging.py
backend/tests/: conftest.py  test_api.postman_collection.json  test_api.py  test_docker.py  test_engines.py  test_main.py  test_self_play.py
charts/backend/: values-prod.yaml  values.yaml
charts/frontend/: values-prod.yaml  values.yaml
chess-bot-backend/: .dockerignore  alembic.ini  pyproject.toml
chess-bot-backend/alembic/: env.py
chess-bot-backend/alembic/versions/: 39410eb01050_initial_migration.py
chess-bot-backend/chess_bot_backend/: data_manager.py  glicko2_ratings.py  llm_engine.py  models.py  tournament.py
chess-bot-backend/experiments/: chess.ipynb
frontend/: .dockerignore  .yarnrc.yml  Dockerfile  index.html  jest.config.js  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/cypress/e2e/: game.cy.ts
frontend/e2e/: accessibility.spec.ts  debug-helper.ts  docker.spec.ts  game.spec.ts  performance.spec.ts  stress.spec.ts  visual.spec.ts
frontend/playwright-report/: index.html
frontend/public/sounds/: README.md
frontend/src/: App.tsx  main.tsx  setupTests.ts  theme.ts
frontend/src/__tests__/: App.test.tsx  ErrorBoundary.test.tsx  GameViewer.test.tsx  api.test.ts  useGameState.test.ts
frontend/src/components/: BotInfo.tsx  EngineInfo.tsx  EngineMonitor.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  EvaluationBar.tsx  GameViewer.tsx  MultiGameViewer.tsx  PerformanceMonitor.tsx  SettingsMenu.tsx  ThemeToggle.tsx
frontend/src/contexts/: SettingsContext.tsx
frontend/src/hooks/: useChessSound.ts  useErrorManager.ts  useGameState.ts  usePositionEvaluation.ts  useToast.ts
frontend/src/services/: api.ts
frontend/src/test/: setup.ts
frontend/src/types/: bots.ts  chart.d.ts  game.ts
frontend/src/utils/: debounce.ts  logger.ts
