[tool.poetry]
name = "ai-chess-experiments"
version = "0.1.0"
description = "Experiments with various AI approaches to play chess on Lichess"
authors = ["Duncan Haywood"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-chess = "^1.999"
numpy = "^1.26.4"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
berserk = "^0.13.0"  # Lichess API client
rich = "^13.7.0"     # Better terminal output
psutil = "^5.9.8"    # System monitoring
prometheus-client = "^0.19.0"  # Metrics collection

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pylint = "^3.0.3"
debugpy = "^1.8.0"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
