[tool.poetry]
name = "chess-bot"
version = "0.1.0"
description = "Chess bot with various AI engines"
authors = ["Duncan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-chess = "^1.999"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
requests = "^2.32.3"
types-requests = "^2.32.0.20241016"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
