[tool.poetry]
name = "ai-chess-experiments"
version = "0.1.0"
description = "Chess bot experiments"
authors = ["Duncan Haywood"]
packages = [
    { include = "ai_chess_experiments" }
]

[tool.poetry.dependencies]
python = "^3.11"
python-chess = "^1.999"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
